--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
+    <link href="https://cdn.jsdeliver.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
     <title>Stay Healthy</title>
   </head>
   <body>
